# twitch-analytics-mcp

./: .env.example  .gitignore  .prettierignore  README.md  pyproject.toml
.github/instructions/: instructions.md
src/: database.py  logging_config.py  main.py  models.py  twitch_api.py  twitch_exceptions.py
src/db/: database.py
src/decorators/: mcp_exceptions.py  twitch_exceptions.py
src/services/: twitch_api.py
src/utils/: exceptions.py
tests/: __init__.py  check_db.py  test_integration.py
