[project]
name = "twitch-analytics-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksym Dombrov",email = "maksymdombrov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp (>=2.12.2,<3.0.0)",
    "twitchapi (>=4.5.0,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "apsw (>=3.50.4.0,<4.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
